<resources>
    <string name="app_name">Booking</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>
    <string name="default_notification_channel_name" translatable="true">Booking</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Էլ․ փոստ կամ հեռախոս</string>
    <string name="prompt_password">Գախտնաառ</string>
    <string name="action_sign_in">Մուտք</string>
    <string name="retry_autologin">Կրկին փորձել</string>
    <string name="standart_login">Նորմալ մուտք</string>
    <string name="pax">Տեղ</string>
    <string name="price">Գին</string>
    <string name="nights">Գիշեր</string>
    <string name="total">Ընդամենը</string>
    <string name="guest">Հյուր</string>
    <string name="adults">Մեծահասակ</string>
    <string name="childs">Երեխա</string>
    <string name="email">Էլ․ փոսթ</string>
    <string name="phone">Հեռախոս</string>
    <string name="arrival">Մուտք</string>
    <string name="departure">Ելք</string>
    <string name="room">Սենյակ</string>
    <string name="message">Հահորդագրություն</string>
    <string name="bed">Տեղեր</string>
    <string name="save">Պահպանել</string>
    <string name="Start">Սկիզբ</string>
    <string name="End">Ավարտ</string>
    <string name="AddReserve">Ամրագրել</string>
    <string name="Checkin">Գրանցել /Մուտք/</string>
    <string name="Checkout">Դուրս գրել /Ելք/</string>
    <string name="CancelReservation">Չեղարկել</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Departures">Մեկնողներ</string>
    <string name="Arrives">Ժամանողներ</string>
    <string name="Inhouse">Զբաղված է</string>
    <string name="All">Բոլորը</string>
    <string name="Rooms">Համարներ</string>
    <string name="Options">Ընտրանքներ</string>
    <string name="OK">ԱՅՈ</string>
    <string name="YES">ԱՅՈ</string>
    <string name="CANCEL">ՈՉ</string>
    <string name="SaveChanges">Պահպանել՞ փոփոխությունները</string>
    <string name="Username">Օգտագործող</string>
    <string name="Password">Գախտնաբար</string>
    <string name="Empty"></string>
    <string name="Saved">Պահպանված է</string>
    <string name="Reservation">Ամրագրում</string>
    <string name="NewRoom">Նոր համար</string>
    <string name="Category">Կարգ</string>
    <string name="Account">Անձնական էջ</string>
    <string name="Settings">Կարգավորումներ</string>
    <string name="GeneralSettings">Ընդհանուր կարգավորումներ</string>
    <string name="Stays">Հյուրանոց</string>
    <string name="HolidayPark">Հանգստի գոտի</string>
    <string name="Restaurant">Ռեստորան</string>
    <string name="Services">Ծառայություններ</string>
    <string name="ID">ID</string>
    <string name="Firstname">Անուն</string>
    <string name="Lastname">Ազգանուն</string>
    <string name="Email">Էլ․ հասցե</string>
    <string name="Phone">Բջջային համար</string>
    <string name="ChangePassword">Փոխել գախտնաբառը</string>
    <string name="CurrentPassword">Ընթացիկ գախտնաբառը</string>
    <string name="NewPassword">Նոր գախտնաբար</string>
    <string name="RepeatPassword">Կրկնել գախտնաբար</string>
    <string name="PropertyType">Օբյեկտի տեսակը</string>
    <string name="StarRating">Կարգը</string>
    <string name="Error">Սխալ</string>
    <string name="PasswordsIsNotEqual">Նոր գախտնաբառը և նրա կրկնությունը նույնը չէն</string>
    <string name="PasswordCannotBeEmtpy">Գախտնաբառը չի կարող լինի դատարկ</string>
    <string name="YourPasswordWasChanged">Ձեր գախտնաբառը փոխված է</string>
    <string name="YourCurrentPasswordIsInvalid">Ընդացիկ գախտնաբառը սխալ է</string>
    <string name="Exit">Դուրս գալ</string>
    <string name="Save">Պահպանել</string>
    <string name="ConfirmToSaveChanges">Պահպանել՞ փոփոխությունները</string>
    <string name="History">Պատմություն</string>
    <string name="Hotel">Հյուրանոց</string>
    <string name="EditName">Խմբագրել անվանումը</string>
    <string name="Armenian">Հայերեն</string>
    <string name="English">Անգլերեն</string>
    <string name="Russian">Ռուսերեն</string>
    <string name="EditClass">Հմբագրել դասը</string>
    <string name="Class">Դասը</string>
    <string name="Parameters">Պարամետրերը</string>
    <string name="Facilities">Հարմարություններ</string>
    <string name="Area">Մակերեսը</string>
    <string name="OneRoom">Մեկսենյականոց</string>
    <string name="Multiroom">Բազմասենյականոց</string>
    <string name="Beds">Մահճակալներ</string>
    <string name="Bedroom1">Ննջարան 1</string>
    <string name="Bedroom2">Ննջարան 2</string>
    <string name="ExtraBeds">Հավելյալ տեղեր</string>
    <string name="UponRequest">Պահանջի դեպքում</string>
    <string name="Roomwithspecialamenities">Հատուկ հարմարություններով համարներ</string>
    <string name="NumberOfPlace">Տեղերի քանակը</string>
    <string name="RoomFacilities">Սենյակի հարմարությունները</string>
    <string name="MainName">Հիմնական անվանումը</string>
    <string name="View">Տեսարան</string>

</resources>