<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RoomFacilitiesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/back"
        style="@style/SettingsOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/prev" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/Parameters" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontBigLightblue"
            android:text="@string/Roomwithspecialamenities" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvspecial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/FontBigLightblue"
        android:text="@string/NumberOfPlace" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvplacenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/FontBigLightblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MainName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvmainname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/FontBigLightblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RoomFacilities" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvfacilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/FontBigLightblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/View" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</FrameLayout>